# xiaoli-proxy-tools

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: advanced_proxy_usage.py  generate_proxy.py  proxy_requests.py
examples/client/: async_proxy_client_demo.py  proxy_client_demo.py  real_proxy_request.py  real_site_with_headers.py  request_to_curl_demo.py
examples/generator/: generate_million_proxies.py  generate_proxy.py
proxy_client/: __init__.py  async_client.py
proxy_scheduler/: __init__.py  client.py  executor.py  generator.py  geo.py  ipweb.py
proxy_scheduler/antibot/: __init__.py  engine.py
proxy_scheduler/core/: __init__.py  models.py
proxy_scheduler/data/: __init__.py  geo_codes.min.json
proxy_scheduler/generator/: __init__.py  api.py  core.py  geo.py
proxy_scheduler/retry/: __init__.py  strategy.py
proxy_scheduler/session/: __init__.py  manager.py
proxy_scheduler/transport/: __init__.py  base.py  curl_cffi_transport.py  requests_transport.py
proxy_scheduler_client/: __init__.py  errors.py  request.py  response.py  session.py  transport.py
proxy_scheduler_client/client/: __init__.py  client.py  cluster.py  errors.py  limits.py  metrics.py  pool.py  process.py  request.py  response.py  runtime.py  session.py
proxy_scheduler_client/client/transport/: __init__.py  aiohttp_transport.py  base.py
