[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipweb-proxy-sdk"
version = "0.1.0"
description = "Python SDK for IPWEB dynamic proxy username and client integration."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "xiaoli-proxy-tools maintainers" }
]
keywords = ["proxy", "ipweb", "dynamic-proxy", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Proxy Servers",
]
dependencies = []

[project.optional-dependencies]
requests = ["requests>=2.31.0"]
httpx = ["httpx>=0.24.0"]

[project.urls]
Homepage = "https://docs.ipweb.cc/user-guide/"
Documentation = "https://docs.ipweb.cc/user-guide/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["proxy_scheduler*"]
