[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ipweb-proxy-sdk"
version = "0.1.0"
description = "Python SDK for IPWEB dynamic proxy generation and async proxy requests."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "xiaoli-proxy-tools maintainers" }
]
keywords = ["proxy", "ipweb", "dynamic-proxy", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: Proxy Servers",
]
dependencies = []

[project.optional-dependencies]
client = ["curl-cffi>=0.14.0"]
requests = ["requests>=2.31.0"]
requests-socks = ["requests[socks]>=2.31.0"]
httpx = ["httpx>=0.24.0"]
httpx-socks = ["httpx[socks]>=0.24.0"]
aiohttp = ["aiohttp>=3.9.0"]
aiohttp-socks = ["aiohttp>=3.9.0", "aiohttp-socks>=0.10.1"]
playwright = ["playwright>=1.40.0"]

[project.urls]
Homepage = "https://docs.ipweb.cc/user-guide/"
Documentation = "https://docs.ipweb.cc/user-guide/"

[tool.setuptools]
include-package-data = true
py-modules = ["base_client"]

[tool.setuptools.packages.find]
where = ["."]
include = ["proxy_scheduler*", "proxy_client*"]

[tool.setuptools.package-data]
proxy_scheduler = ["data/*.json"]
